fix some formatting issues when rendered on slideviewer

--- a/DataWranglingPython/DataWranglingPython.ipynb
+++ b/DataWranglingPython/DataWranglingPython.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:1e63aa5ec1f1483f11961d0e0a636dc35b251dbe27d7a1bf48df5642665c47f2"
+  "signature": "sha256:fce39d6f299678c15ec40b9c4c6e4e92cc060c9d43fd4a859c19151974f451ec"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -43,7 +43,8 @@
      },
      "source": [
       "#Introduction\n",
-      " In this module, we\u2019ll discuss a several common sources of frustration in data analysis. The agenda:\n",
+      "In this module, we\u2019ll discuss a several common sources of frustration in data analysis. The agenda:\n",
+      "\n",
       "- data loading and cleaning\n",
       "- summarizing information (about different groups in your dataset)\n",
       "- reshaping your data (using the split-apply-combine paradigm)\n",
@@ -4737,7 +4738,7 @@
       }
      },
      "source": [
-      "Because the trip duration were between 30 and 60 minutes, there is a base fee of \\$2. However, these users were registered, so instead we calculate their fee as \\$1.50.\n",
+      "Because the trip duration were between 30 and 60 minutes, there is a base fee of two dollars. However, these users were registered, so instead we calculate their fee as 1.50 dollars.\n",
       "\n",
       "Now that we feel comfortable `get_fee` is operating properly, we can use apply to create a variable in our trips data frame with the fee for each trip."
      ]
